@@ -18,7 +18,9 @@ sdcc (3.8.0+dfsg-1) UNRELEASED; urgency=medium
   * Add override file to remove false lintian gfdl positives
   * Add dependency on zlib1g-dev
   * Add dependency on inkscape (Closes: #911713)
-
+  * Change .c files to non executable in rules
+  * Make clean targer remove config.log and Makefile
+ 
  -- Gudjon I. Gudjonsson <gudjon@gudjon.org>  Tue, 30 Oct 2018 09:51:18 +0100
 
 sdcc (3.7.0+dfsg2-0.1) unstable; urgency=medium
